[package]
name = "hookanchor"
version = "0.4.4"
edition = "2021"
build = "build.rs"

# Main binary
[[bin]]
name = "ha"
path = "src/ha.rs"







# Example binaries
[[example]]
name = "basic_launcher"
path = "examples/basic_launcher.rs"

[[example]]
name = "test_all_actions"
path = "examples/test_all_actions.rs"

[[example]]
name = "hybrid_js_business_logic"
path = "examples/hybrid_js_business_logic.rs"

[[example]]
name = "markdown_scanner"
path = "examples/markdown_scanner.rs"

[[example]]
name = "scan_markdown_commands"
path = "examples/scan_markdown_commands.rs"

[dependencies]
eframe = "0.29"
egui = "0.29"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rquickjs = "0.9"
chrono = "0.4"
urlencoding = "2.1"
dirs = "5.0"
libc = "0.2"
image = "0.24"

[build-dependencies]
chrono = "0.4"
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.0"
