# ⚠️ CRITICAL REMINDER FOR CLAUDE ⚠️
# AFTER EVERY `cargo build --release` YOU MUST RUN:
# ~/ob/proj/HookAnchor/target/release/ha --restart
# This restarts the server to use the updated binary!

[package]
name = "hookanchor"
version = "0.13.3"
edition = "2021"
build = "build.rs"

# HA binary (main command-line entry point)
[[bin]]
name = "ha"
path = "src/ha.rs"

# GUI popup binary (main application)
[[bin]]
name = "popup_server"
path = "src/main.rs"

[[bin]]
name = "popup"
path = "src/popup_launcher.rs"

# GUI installer binary
[[bin]]
name = "installer_gui"
path = "src/installer_gui.rs"

# URL Handler binary (deprecated - moved to url_handler.rs.bak)
# Functionality has been moved to ha binary with --hook flag
# [[bin]]
# name = "hook_url_handler"
# path = "src/url_handler.rs.bak"







# Example binaries
[[example]]
name = "basic_launcher"
path = "examples/basic_launcher.rs"

[[example]]
name = "test_all_actions"
path = "examples/test_all_actions.rs"

[[example]]
name = "hybrid_js_business_logic"
path = "examples/hybrid_js_business_logic.rs"

[[example]]
name = "markdown_scanner"
path = "examples/markdown_scanner.rs"

[[example]]
name = "scan_markdown_commands"
path = "examples/scan_markdown_commands.rs"

[dependencies]
eframe = "0.29"
egui = "0.29"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rquickjs = "0.9"
chrono = "0.4"
urlencoding = "2.1"
dirs = "5.0"
libc = "0.2"
image = "0.24"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"

[build-dependencies]
chrono = "0.4"
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.0"
