# ⚠️ CRITICAL REMINDER FOR CLAUDE ⚠️
# Do not run `cargo build --release` YOU MUST BOTH OF THESE INSTEAD:
# cd ~/ob/proj/HookAnchor && just build
# ~/ob/proj/HookAnchor/target/release/ha --restart
# This restarts the server to use the updated binary!

[package]
name = "hookanchor"
version = "0.17.0"
edition = "2021"
build = "build.rs"

# HA binary (main command-line entry point)
[[bin]]
name = "HookAnchorCommand"
path = "src/ha.rs"

# GUI popup binary (main application)
[[bin]]
name = "HookAnchorPopupServer"
path = "src/main.rs"

[[bin]]
name = "HookAnchorPopup"
path = "src/popup_launcher.rs"

# GUI installer binary
[[bin]]
name = "HookAnchorInstaller"
path = "src/installer_gui.rs"

# History viewer binary
[[bin]]
name = "HookAnchorHistoryViewer"
path = "src/history_viewer.rs"

# Dialog viewer binary
[[bin]]
name = "HookAnchorDialog"
path = "src/dialog_viewer.rs"

# URL Handler binary (deprecated - moved to url_handler.rs.bak)
# Functionality has been moved to ha binary with --hook flag
# [[bin]]
# name = "hook_url_handler"
# path = "src/url_handler.rs.bak"







# Example binaries
[[example]]
name = "basic_launcher"
path = "examples/basic_launcher.rs"

[[example]]
name = "test_all_actions"
path = "examples/test_all_actions.rs"

[[example]]
name = "hybrid_js_business_logic"
path = "examples/hybrid_js_business_logic.rs"

[[example]]
name = "markdown_scanner"
path = "examples/markdown_scanner.rs"

[[example]]
name = "scan_markdown_commands"
path = "examples/scan_markdown_commands.rs"

[dependencies]
eframe = "0.29"
egui = "0.29"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rquickjs = "0.9"
chrono = "0.4"
urlencoding = "2.1"
dirs = "5.0"
libc = "0.2"
image = "0.24"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"

[build-dependencies]
chrono = "0.4"
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.0"
